# editor_3d_platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/bvh_viewer/: CMakeLists.txt  main.cpp
src/bvh_viewer/action/: default_action.cpp  default_action.h  intersect_bvh_action.cpp  intersect_bvh_action.h
src/bvh_viewer/bvh/: bvh_types.h  mesh_bvh.cpp  mesh_bvh.h  triangle_bvh.cpp  triangle_bvh.h
src/bvh_viewer/ui/: ui_creater.cpp  ui_creater.h  ui_triangle_bvh.cpp  ui_triangle_bvh.h  ui_utils.cpp  ui_utils.h
src/e3d_core/: CMakeLists.txt
src/e3d_core/action/action_frame/: action_base.cpp  action_base.h  action_manager.cpp  action_manager.h  action_result.h
src/e3d_core/action/common_action/: draw_loop_action.cpp  draw_loop_action.h  draw_polygon_action.cpp  draw_polygon_action.h  pick_point_action.cpp  pick_point_action.h
src/e3d_core/element/: document.cpp  document.h  element.cpp  element.h  element_id.cpp  element_id.h  line_element.cpp  line_element.h  loop_element.cpp  loop_element.h  mesh_element.cpp  mesh_element.h  point_element.cpp  point_element.h  polygon_element.cpp  polygon_element.h  temp_element.cpp  temp_element.h
src/e3d_core/math/Algorithm/: AlgorithmResultType.h  AreaCalculator.cpp  AreaCalculator.h  ClipperUtils.cpp  ClipperUtils.h  CurveCurveColinear.cpp  CurveCurveColinear.h  CurveCurveIntersect.cpp  CurveCurveIntersect.h  CurveCurveIntersectPrivate.h  CurveCurveOverlap.cpp  CurveCurveOverlap.h  CurveCurveOverlapPrivate.h  DistanceCalculator.cpp  DistanceCalculator.h  DistanceCalculatorPrivate.h  EquationsSolver.h  LineLineIntersectPrivate.h  PositionJudge.cpp  PositionJudge.h  PositionJudgePrivate.h
src/e3d_core/math/Common/: Constants.h  Define.h  e3d_object.h
src/e3d_core/math/Geometry/: GeometryUtils.cpp  GeometryUtils.h  ICurve.h  ICurve2d.h  ICurve3d.h  IGeometry.h  ILoop.h  IPolygon.h  ISurface.h  Line2d.cpp  Line2d.h  Line3d.cpp  Line3d.h  Loop.cpp  Loop.h  LoopUtils.cpp  LoopUtils.h  MathObjectType.h  Mesh.cpp  Mesh.h  (+6 more)
src/e3d_core/utils/: data_converter.cpp  data_converter.h  debug_warn.cpp  debug_warn.h  random_color.cpp  random_color.h
src/e3d_core/viewer/: app.cpp  app.h  event_manager.cpp  event_manager.h  geom_to_drawable.cpp  geom_to_drawable.h  ui_viewer.cpp  ui_viewer.h
(+27 files in other folders)
